--- a/diabetes_regression/conda_dependencies.yml
+++ b/diabetes_regression/conda_dependencies.yml
@@ -23,11 +23,11 @@ dependencies:
 
   - pip:
       # Base AzureML SDK
-      - azureml-sdk
+      - azureml-sdk==1.27.*
 
       # Must match AzureML SDK version.
       # https://docs.microsoft.com/en-us/azure/machine-learning/concept-environments
-      - azureml-defaults
+      - azureml-defaults==1.27.*
 
       # Training deps
       - scikit-learn
