--- a/diabetes_regression/conda_dependencies_scoring.yml
+++ b/diabetes_regression/conda_dependencies_scoring.yml
@@ -25,7 +25,7 @@ dependencies:
 
   - pip:
       # Base AzureML SDK
-      - azureml-sdk>1.18.0
+      - azureml-sdk==1.27.*
       
       # Scoring deps
       - scikit-learn
