changes to env file

--- a/.env.example
+++ b/.env.example
@@ -34,10 +34,10 @@ MODEL_PATH = ''
 EVALUATE_SCRIPT_PATH = 'evaluate/evaluate_model.py'
 REGISTER_SCRIPT_PATH = 'register/register_model.py'
 SOURCES_DIR_TRAIN = 'diabetes_regression'
-DATASET_NAME = 'diabetes_ds'
+DATASET_NAME = 'driver_ds'
 DATASET_VERSION = 'latest'
 # Optional. Set it if you have configured non default datastore to point to your data
-DATASTORE_NAME = ''
+DATASTORE_NAME = 'workspaceblobstore'
 SCORE_SCRIPT = 'scoring/score.py'
 
 # Optional. Used by a training pipeline with R on Databricks
