--- a/.pipelines/diabetes_regression-variables-template.yml
+++ b/.pipelines/diabetes_regression-variables-template.yml
@@ -22,10 +22,10 @@ variables:
   - name: EXPERIMENT_NAME
     value: mlopspython
   - name: DATASET_NAME
-    value: diabetes_ds
+    value: driver-ds
   # Uncomment DATASTORE_NAME if you have configured non default datastore to point to your data
-  # - name: DATASTORE_NAME
-  #   value: datablobstore
+  - name: DATASTORE_NAME
+    value: workspaceblobstore
   - name: DATASET_VERSION
     value: latest
   - name: TRAINING_PIPELINE_NAME
