changes to env file

--- a/.pipelines/diabetes_regression-ci.yml
+++ b/.pipelines/diabetes_regression-ci.yml
@@ -93,4 +93,6 @@ stages:
     displayName: "Publish artifact if new model was registered"
     timeoutInMinutes: 0
     steps:
+    - script: python -m pip install --user --upgrade azureml-sdk
+      displayName: 'upgrade Azure ML SDK'
     - template: diabetes_regression-publish-model-artifact-template.yml
