changes to env file

--- a/.pipelines/diabetes_regression-ci.yml
+++ b/.pipelines/diabetes_regression-ci.yml
@@ -90,9 +90,8 @@ stages:
   - job: "Training_Run_Report"
     dependsOn: "Run_ML_Pipeline"
     condition: always()
+    container: mlops
     displayName: "Publish artifact if new model was registered"
     timeoutInMinutes: 0
     steps:
-    - script: python -m pip install --user --upgrade azureml-sdk
-      displayName: 'upgrade Azure ML SDK'
     - template: diabetes_regression-publish-model-artifact-template.yml
