--- a/.pipelines/code-quality-template.yml
+++ b/.pipelines/code-quality-template.yml
@@ -17,9 +17,17 @@ steps:
     failTaskOnFailedTests: true
   displayName: 'Publish test results'
 
+- task: UseDotNet@2
+  displayName: 'Install .NET Core SDK'
+  inputs:
+    version: 3.1.x
+    performMultiLevelLookup: true
+
 - task: PublishCodeCoverageResults@1
   displayName: 'Publish coverage report'
   condition: succeededOrFailed()
+  env:
+    DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: '1'
   inputs:
     codeCoverageTool: Cobertura
     summaryFileLocation: 'coverage.xml'
